--- a/env.html
+++ b/env.html
@@ -15,25 +15,10 @@
       <div class="lid two"></div>
       <div class="envelope"></div>
       <div class="letter">
-        <p>Selamat Ulang Tahun yang ke-22 ya Sayang<br><br>
-        Dari Randy buat Ayaaaa<br>
-        Moga rezeki berlimpah, sehat selalu, dan menjadi pribadi yang<br>
-        lebih baik kedepannya.
-        jangan lupa berterimakasih dan sayangi<br>
-        diri sendiri ya karena sudah bertahan selama ini.<br><br>
-        Peasian laa, jangan mageran jua lagi cepet cepet selesain skripsi,<br>
-        banyak2 minum nya jan lupa, makan biasakan teratur,<br> 
-        hbis tu jngan begadang lagi dan jaga kesehatan.<br>
-        And Remember <br>
-        I Will Always Be There For U<br><br>
-        BTW ada pesan rahasia lo<br>
-        dibawah surat ini hehehee :)
-
-
-        </p>
+        <p>Disini isinya pesan</p>
       </div>
       <div class="hmm">
-        <a href="index.html" onclick="alert('Haha boong aja, gak ada pesan rahasia\nbut i just wanna say\n\nLove U :*\n\nEND OF PROGRAM')">Hehehee</a>
+        <a href="index.html" onclick="alert('i just wanna say\n\nLove U :*\n\nEND OF PROGRAM')">Hehehee</a>
 	</div>
     </div>
   </body>
